unpackaged/main/default/objects/Product_Sub_Department__c/Product_Sub_Department__c.object-meta.xml
<CustomObject>
    <description>Master Detail of Category Assist Object and related to Assisted Sales</description>
    <label>Product Sub Department</label>
    <nameField>
        <label>Sub Department</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Sub Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>