unpackaged/main/default/objects/Product_Sub_Department__c/fields/For_Assisted_Sales__c.field-meta.xml
<CustomField>
    <fullName>For_Assisted_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this sub department is available for selection in assisted sales.</description>
    <label>For Assisted Sales</label>
    <type>Checkbox</type>
</CustomField>