unpackaged/main/default/objects/Product_Sub_Department__c/fields/Sub_Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Sub_Department_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Sub Department ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>